Fixed text overflowing div on post, #93

--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -1,6 +1,8 @@
 .post {
   padding: 10px;
   border: 1px solid #EEEEEE;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
   hr {
     margin-top: 15px;
     margin-bottom: 15px;
